--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -61,3 +61,97 @@
           background: url('/images/icons.gif') -20px 0px
           display: block
           overflow: hidden
+
+.explore
+  width: 900px
+  h1
+    margin-top: 16px
+    color: #3f7be0
+    font-size: 36px
+    line-height: 40px
+    font-family: mircosoft yahei
+  .tag_wall
+    width: 900px
+    height: 450px
+    -moz-border-radius-topright: 15px
+    -moz-border-radius-topleft: 15px
+    -webkit-border-top-left-radius: 15px
+    -webkit-border-top-right-radius: 15px
+    border-top-left-radius: 15px
+    border-top-right-radius: 15px
+    overflow: hidden
+    .item
+      width: 150px
+      height: 150px
+      border: 0
+      float: left
+      overflow: hidden
+      .item
+      .tag
+        span
+          background: url('images/bg_box.png') repeat-x
+          padding: 2px
+        color: #dcdcdc
+        font-family: microsoft yahei
+        font-size: 12px
+        line-height: 20px
+        text-decoration: none
+        margin: 120px 10px 0 10px
+        display: block
+  .tag_list
+    width: 898px
+    height: auto
+    padding-top: 30px
+    padding-bottom: 35px
+    border-left: 1px solid #dcdcdc
+    border-right: 1px solid #dcdcdc
+    border-bottom: 1px solid #dcdcdc
+    -moz-border-radius-bottomleft: 15px
+    -moz-border-radius-bottomright: 15px
+    -webkit-border-bottom-left-radius: 15px
+    -webkit-border-bottom-right-radius: 15px
+    border-bottom-left-radius: 15px
+    border-bottom-right-radius: 15px
+    .row
+      width: 898px
+      height: 40px
+      margin-top: 10px
+      .tag_name
+        width: 340px
+        height: 40px
+        float: left
+        padding-left: 50px
+        a
+          font-size: 24px
+          font-family: microsoft yahei
+          line-height: 40px
+          text-decoration: none
+          color: #3f7be0
+          display: block
+      .activity
+        width: 450px
+        height: 40px
+        float: left
+        padding-right: 40px
+        .item
+          height: 40px
+          width: 15px
+          float: left
+          margin: 0px 5px 0 5px
+          position: relative
+          cursor: pointer
+          div
+            height: 40px
+            width: 15px
+            position: absolute
+            bottom: 0
+            background-color: #3f7be0
+            -moz-border-radius-topright: 10px
+            -moz-border-radius-topleft: 10px
+            -webkit-border-top-right-radius: 10px
+            -webkit-border-top-left-radius: 10px
+            border-top-right-radius: 10px
+            border-top-left-radius: 10px
+          &.odd
+            div
+              background-color: #1f55b0
