--- a/app/views/tags/index.html.haml
+++ b/app/views/tags/index.html.haml
@@ -1,13 +1,19 @@
 - css 'tags'
+- js 'tags'
 - content_for :title, "探索_宽岛"
 
 - @site_layout = "site"
 
-
 .explore
   %h1 探索
   .tag_wall
-    %ul
+    %ul.list
+      - @tag_posts.each do |tag, post|
+        = render partial: "posts/post4tag", object: post, as: :post, locals: {tag: tag}
+    %ul.list
+      - @tag_posts.each do |tag, post|
+        = render partial: "posts/post4tag", object: post, as: :post, locals: {tag: tag}
+    %ul.list
       - @tag_posts.each do |tag, post|
         = render partial: "posts/post4tag", object: post, as: :post, locals: {tag: tag}
   .tag_list
