--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -80,14 +80,22 @@
     border-top-left-radius: 15px
     border-top-right-radius: 15px
     overflow: hidden
+    .list
+      height: 150px
+      overflow: hidden
+      margin: 0
+      padding: 0
+
     .item
       width: 150px
       height: 150px
       border: 0
       float: left
       overflow: hidden
+      position: relative
       .item
       .tag
+        position: absolute
         span
           background: url('images/bg_box.png') repeat-x
           padding: 2px
