--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -1959,8 +1959,12 @@ div.new_reply .content_footer .right a.reply:hover
 
 .explore{
 	width:900px;
-
+}	
+.explore a{
+	color:#ffffff;
+	text-decoration:none;
 }
+
 .explore h1{
 	margin-top:16px;
 	color:#3f7be0;
@@ -1979,80 +1983,62 @@ div.new_reply .content_footer .right a.reply:hover
 	border-top-left-radius:15px;
 	border-top-right-radius:15px;
 	overflow:hidden;
+	padding:0;
+	margin:0;
+
 }
 
-.explore .tag_wall .cell_box{
+.explore .tag_wall .text_box{
+	height:150px; 	
 	width:150px;
-	height:150px;
-	background:url('images/tagspic.gif') no-repeat;
-	border:0;
+	background-color:#f70967;
+	overflow:hidden;
+	position:relative;
+	padding:0;
 	float:left;
+	
 }
 
-.explore .tag_wall .cell_text{
-	width:150px;
-	height:150px;
-	background-color:#00c21e;
-	border:0;
-	float:left;
+.explore .tag_wall .text_box .title{
+	margin:12px;
+	line-height:24px;
 	font-size:18px;
 	font-family:microsoft yahei;
-	overflow:hidden;
-	text-indent:36px;
-
+	
 }
 
-.explore .tag_wall .cell_text a {
-	overflow:hidden;
-	text-decoration:none;
-	line-height:30px;
-	color:#ffffff;
-	display:block;
+.explore .tag_wall .text_box .title img{
+	position:absolute;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	border:0;
 }
 
-.explore .tag_wall .cell_text .content_box_green{
-	width:150px;
-	height:110px;
-    margin:0px auto;
-
+.explore .tag_wall .text_box .gradient{
+	background:url('images/tag_bg1.png') no-repeat scroll transparent;
+	position:absolute;
+    top:110px;
+    left:0;
+    bottom:0;
+    right:0;
 }
 
-
-.explore .tag_wall .cell_text .tag_box_green{
-	width:150px;
-	height:40px;
-    background:url('images/tag_box_bg.png') no-repeat;
-    opacity: 0.9;
-    -moz-opacity: 0.9;
-    filter:alpha(opacity=90);
-    
+.explore .tag_wall .text_box .tag{
+	background:none repeat scroll 0 0 rgba(0,0,0,0.5)!important;
+	-moz-border-radius:10px;
+	webkit-border-radius:10px;
+	border-radius:10px;
+	position:absolute;
+    bottom:8px;
+	left:8px;
+	padding:2px 6px;	
 }
 
-.explore .tag_wall span{
-	background-color:#333333;
-	padding:1px 5px;
-    
-}
-.explore .tag_wall .cell_text span{
-    background:#333333;
-    color:#dcdcdc;
-    font-size:12px;
-    padding:1px 5px; 
-
-}
-
-
-
-
-
-.explore .tag_wall .cell_box a{
+.explore .tag_wall .text_box .tag a{
 	color:#dcdcdc;
-	font-family:microsoft yahei;
-	font-size:12px;
-	line-height:20px;
-	text-decoration:none;
-    margin:120px 10px 0 10px;
-    display:block;	
+
 }
 
 .explore .tag_list{
@@ -2095,10 +2081,9 @@ div.new_reply .content_footer .right a.reply:hover
 }
 
 .explore .tag_list .row .activity{
-	width:450px;
+	width:400px;
 	height:40px;
-	float:left;
-	padding-right:40px;
+	float:right;
 
 }
 
@@ -2106,7 +2091,7 @@ div.new_reply .content_footer .right a.reply:hover
 	width:15px;
 	height:40px;
 	background-color:#3f7be0;
-	float:right;
+	float:left;
 	margin:0px 5px 0 5px;
 	-moz-border-radius-topright:10px;
 	-moz-border-radius-topleft:10px;
@@ -2120,7 +2105,7 @@ div.new_reply .content_footer .right a.reply:hover
 	width:15px;
 	height:40px;
 	background-color:#1f55b0;
-	float:right;
+	float:left;
 	margin:0px 5px 0 5px;
 	display:block;
 	-moz-border-radius-topright:10px;
