--- a/app/views/posts/_post4tag.html.haml
+++ b/app/views/posts/_post4tag.html.haml
@@ -1,8 +1,4 @@
 %li.item{ class: post.type }
-  %a.open{ href: blog_path(post.blog) + "posts/#{post.id}", target: "_blank",
-    title: '' }
-    = render partial: "posts/brief_#{post.type}", object: post, as: :post, 
-      locals: {pic_size: '150'}
-  %a.tag{html: tagged_path(tag)}<
-    %span<
-      = tag
+  %a{href: tagged_path(tag), target: "_blank"}<
+    = render partial: "posts/post4tag_#{post.type}", object: post, as: :post,
+      locals: {tag: tag}
