--- a/app/views/posts/_post4tag.html.haml
+++ b/app/views/posts/_post4tag.html.haml
@@ -1,4 +1,4 @@
-%li.item{ class: post.type }
+.item{ class: post.type }
   %a{href: tagged_path(tag), target: "_blank"}<
     = render partial: "posts/post4tag_#{post.type}", object: post, as: :post,
       locals: {tag: tag}
