add tag in blog/new

--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -23,7 +23,30 @@
       line-height: 40px
       font-size: 20px
       width: 300px
-    
+  .page_url
+    width: 540px
+  .page_box
+    padding-top: 20px    
+    height: 100px
+    .left
+      float: left
+      width: 250px
+    .right
+      float: right
+      width: 250px
+      padding-right: 10px
+    .page_name,
+    .page_tag,
+    .error
+      width: 240px
+    .page_name
+      input
+        width: 180px
+    .page_tag
+      input
+        width: 150px
+      
+
   .page_url input
     text-align: right
 
