--- a/app/views/blogs/new.html.haml
+++ b/app/views/blogs/new.html.haml
@@ -3,12 +3,24 @@
     新建页面
   %h2
     我们建议同一页面只发布你的某一方面兴趣，通过宽岛独特的多页面设计，展示自己的不同侧面，例如，你是摄影师，又喜欢分享好听的歌曲，不如建立两个页面，一个用来放摄影照片，一个则用来分享好音乐。
-  .page_name
-    = f.label :title, "页面名称"
-    = f.text_field :title
-  .error
-    &nbsp;
-    = @blog.errors[:title].first
+  .page_box
+    .left
+      .page_name
+        = f.label :title, "名称"
+        = f.text_field :title
+      .error
+        &nbsp;
+        = @blog.errors[:title].first
+    .right
+      .page_tag
+        = f.label :tag, "兴趣类型"
+        = f.text_field :tag
+      .error
+        %span.suggestion
+          (可选)
+        &nbsp;
+        = @blog.errors[:tag].first
+
   .page_url
     = f.label :uri, "自定义网址"
     = f.text_field :uri
