fix textarea bug

--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -276,7 +276,7 @@ form.edit_blog
       background: white
 
     textarea
-      width: 100%
+      width: 378px
       height: 180px
 
     .who_did_this
