--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -471,6 +471,10 @@ fieldset.appearance
       padding: 5px
       font-size: 18px
 
+  .buttons
+    margin-top: 15px
+
+
 .customize_navigation
   @include clear_fix
 
