site logo add title

--- a/app/views/layouts/posts.html.haml
+++ b/app/views/layouts/posts.html.haml
@@ -2,7 +2,7 @@
 - css 'textboxlist'
 - content_for :content, do
   .header
-    %a.logo{href: fucking_root}
+    %a.logo{href: fucking_root, title: "我的主页"}
     .navigator
       %a{href: fucking_root}回我的主页
   .post
