--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,7 +6,7 @@
     %div{:class => "#{k}"}= v
 
 .header
-  %a.logo{href: home_path}
+  %a.logo{href: fucking_root, title: "我的主页"}
   .dash_navigator
     %a{href: wall_posts_path}墙
     &nbsp;|&nbsp;
