--- a/app/views/layouts/minimal.html.haml
+++ b/app/views/layouts/minimal.html.haml
@@ -1,6 +1,6 @@
 - content_for :content, do
   .header
-    %a.logo{href: fucking_root}
+    %a.logo{href: fucking_root, title: "我的主页"}
     .navigator
       %a{href: fucking_root}回我的主页
   = yield
