--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,7 +5,7 @@
   = stylesheet_link_tag 'messages'
 
 .header
-  %a.logo{href: "/home"}
+  %a.logo{href: fucking_root, title: "我的主页"}
   .navigator
     %a.back_to_home{href: fucking_root}
       回我的主页
