css modify for form submit

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -224,10 +224,12 @@
   .send
     input
       background: url('/images/post_send.gif')
+      margin-left: 300px
 
   .save
     input
       background: url('/images/post_save.gif')
+      margin-left: 300px
 
   .post_error
     font-size: 12px
