cursor:pointer for list_image the close

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -154,6 +154,7 @@
       margin-top: 10px
       background: url('/images/icons.gif') -100px -20px
       overflow: hidden
+      cursor: pointer
 
   .text,
   .title_text,
