--- a/app/views/posts/_content.html.haml
+++ b/app/views/posts/_content.html.haml
@@ -6,7 +6,7 @@
       \-关闭描述
   - else
     %a.rich_editor_starter.slight{ :href => "#", :style => (default_rich ? "display:none" : "")}<
-      启用富文本编辑器
+      启用完整编辑框
 - content_for :content_area do
   #box_text.text{ :style => (default_open ? "" : "display:none"), :class => (default_rich ? "text rich_text" : "text") }
     = text_area_tag :content, post.content
