--- a/doc/templates/minimalism.mustache
+++ b/doc/templates/minimalism.mustache
@@ -195,7 +195,7 @@
     {{/text}}
 
     {{#link}}
-      <h2><a href="{{link_url}}">{{title}}</a></h2>
+      <h2><a href="{{shared_url}}">{{title}}</a></h2>
       {{#content}}{{content}}{{/content}}
     {{/link}}
 
