--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -34,7 +34,7 @@
           = post.author.name
       %span.update_time= post.created_at
     .right
-      %a.reply{ :href => post_comments_path(post), :data => { :tgt => "comments" } }<
+      %a.reply{ :href => post_comments_path(post), :title => "评论", :data => { :tgt => "comments" } }<
         = post.comments.count == 0 ? " " : post.comments.count
       %a.open{ :href => posts_blog_path(post), :target => "_blank",
         title: '展开' }
