--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -115,7 +115,20 @@
     border: 1px solid $pink
     background: #fff
     margin-bottom: 30px	
-    
+
+    .file
+      font-size: 12px
+      .file-title
+      .file-size
+      img.file-progress
+        display: block
+        float: left
+        margin: 10px 5px
+        width: 125px
+        height: 12px
+        vertical-align: middle
+        background-image: url(/images/progress-bar/progress.gif)
+
     div
       float: left
 
