post form text modify

--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -1,5 +1,5 @@
 - @post_type = capture do
-  图片
+  图片贴
 - content_for :form do
   #box_file{ :class => 'file_image' }
     %input{ :type => 'file', :id => 'image_uploader', :name => 'file', :autocomplete => 'off'}
