--- a/app/views/posts/_content.html.haml
+++ b/app/views/posts/_content.html.haml
@@ -1,9 +1,9 @@
 - content_for :content_toggle do
   - if closable
     %a.textarea_starter.slight{ :id => "tar_tog_textarea", :href => "#", :style => (default_open ? "display:none" : "") }<
-      +添加描述
+      +添加帖子描述
     %a.textarea_closer.slight{ :id => "tar_tog_textarea_close", :href => "#", :style => (default_open ? "" : "display:none") }<
-      \-关闭描述
+      \-关闭帖子描述
   - else
     %a.rich_editor_starter.slight{ :href => "#", :style => (default_rich ? "display:none" : "")}<
       启用完整编辑框
