--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -231,7 +231,6 @@ form.edit_blog
 
   .blog_info
     width: 380px
-    height: 530px
     left: 10px
 
     label
@@ -259,7 +258,7 @@ form.edit_blog
     .who_did_this
       @include clear_fix
 
-    .title
+    .title, .tag
       width: 368px
       max-width: 368px
       min-width: 368px
