add radius-topleft/topright for tags index

--- a/app/views/posts/_post4tag_pics.html.haml
+++ b/app/views/posts/_post4tag_pics.html.haml
@@ -1,8 +1,9 @@
 - photo = post.photos.sample
 - image = photo.image
-.content
-  = image_tag (image.url_for(:'150') || image.url_for(:medium))
-%a{href: tagged_path(tag), target: "_blank"}<
-  %span.tag<
-    = tag
+- image_url = image.url_for(:'150') || image.url_for(:medium)
+%a{href: tagged_path(tag), target: "_blank", style: "background-image:url(#{image_url})"}<
+  .content
+  %a{href: tagged_path(tag), target: "_blank"}<
+    %span.tag<
+      = tag
 
