--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -98,6 +98,9 @@
         margin: 0
         color: #fff
         text-decoration: none
+        display: block
+        width: 150px
+        height: 150px
       .content
         height: 150px
       .tag
@@ -121,10 +124,54 @@
         position: absolute
         top: 110px 0 0 0
 
-    .bg1
-      background-color: #f70967
+    .left
+      a, .content
+        -moz-border-radius-topleft: 15px
+        -webkit-border-top-left-radius: 15px
+        border-top-left-radius: 15px
+    .right
+      a, .content      
+        -moz-border-radius-topright: 15px
+        -webkit-border-top-right-radius: 15px
+        border-top-right-radius: 15px
+
+    .bg1, .bg2, .bg3, .bg4, .bg5
       .gradient
+        top: 10px
+        right: 0
+        bottom: 0
+        left: 0
+        position: absolute
+                      
+    .bg1
+      .content
+        background-color: #f70967
+      .gradient
+        background: url('/images/tag_gradient.png') no-repeat 0 0 transparent
       
+    .bg2
+      .content
+        background-color: #ae9548
+      .gradient
+        background: url('/images/tag_gradient.png') no-repeat -150px 0 transparent
+
+    .bg3
+      .content
+        background-color: #7b7d6f
+      .gradient
+        background: url('/images/tag_gradient.png') no-repeat -300px 0 transparent
+
+    .bg4
+      .content
+        background-color: #00c21e
+      .gradient
+        background: url('/images/tag_gradient.png') no-repeat -450px 0 transparent
+
+    .bg5
+      .content
+        background-color: #8409f7
+      .gradient
+        background: url('/images/tag_gradient.png') no-repeat -600px 0 transparent
 
   .tag_list
     width: 898px
