--- a/app/views/tags/_tag_trend.html.haml
+++ b/app/views/tags/_tag_trend.html.haml
@@ -3,7 +3,7 @@
     %a{href: tagged_path(tag.tag)}<
       = tag.tag
   .activity
-    - 14.downto(1) do |n|
+    - period().each do |n|
       - d = n.days.ago.strftime("%Y-%m-%d")
       .item{title: "#{d} : #{tag.activity[d]}"}<
         %div
