--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -102,6 +102,15 @@
       width: 180px
       margin-right: 150px
 
+  .file-invalid
+    cursor: pointer
+    color: #514721
+    padding-left: 48px
+    line-height: 24px
+    height: 60px
+    background: url(/images/error.png) no-repeat 24px 5px
+    margin-bottom: 1px
+
   .list_image
     clear: both
     width: 600px
@@ -128,6 +137,9 @@
         height: 12px
         vertical-align: middle
         background-image: url(/images/progress-bar/progress.gif)
+      .file-size
+        color: #666
+        padding-left: 12px
 
     div
       float: left
