post reply visible

--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -247,7 +247,7 @@
   text-decoration: none
 
 .post
-  .remove, .open, .edit, .reply, .repost, .fave, .faved
+  .remove, .edit, .repost, .reply, .open, .fave, .faved
     @include post_button
 
   .open
@@ -278,11 +278,11 @@
     background-position: 0 -80px
 
 .article
-  .remove, .open, .edit, .reply, .repost, .fave, .faved
+  .remove, .edit, .open, .repost, .fave, .faved
     visibility: hidden
 
 .hover
-  .remove, .open, .edit, .reply, .repost, .fave, .faved
+  .remove, .edit, .reply, .open, .repost, .fave, .faved
     visibility: visible
 
 .post_single .open
