--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -140,6 +140,12 @@
       .file-size
         color: #666
         padding-left: 12px
+      .file-error
+        font-size: 12px
+        padding: 2px
+      .file-retry
+        font-size: 12px
+        cursor: pointer
 
     div
       float: left
