--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -195,6 +195,7 @@
         width: 340px
         height: 40px
         float: left
+        overflow: hidden
         padding-left: 50px
         a
           font-size: 24px
