--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -766,16 +766,6 @@ form.edit_page .submit_box input{
 	text-indent: -1000px;
 }
 
-.post .send input{
-	width:150px;
-	height:44px;
-	background:url('images/post_send.gif');
-	cursor:pointer;
-	text-indent: -1000px;
-	overflow:hidden;
-	display:block;
-	border:0px;
-}
 
 
 
@@ -2346,6 +2336,105 @@ div.new_reply .content_footer .right a.reply:hover
 	background:url('images/icons.gif') -20px 0px;
 	overflow:hidden;
 }
+
+
+/*********************post_img_txt_link_video*************************************/
+.post h1{
+	font-family:microsoft yahei;
+	font-weight:normal;
+	font-size:30px;
+	color:#68879F;
+}
+
+.post .send{
+	float:right;
+	width:150px;
+	height:44px;
+	background:url('images/post_send.gif');
+	cursor:pointer;
+	text-indent: -1000px;
+	overflow:hidden;
+	display:block;
+	border:0px;
+}
+
+.post .file_image_commit{
+	clear:both;
+	width:600px;
+	padding:10px 0 10px 20px;
+	font-size:12px;
+	height:45px;
+	line-height:35px;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+	border:1px solid #cadbea;
+	background:#fff;
+	margin-bottom:30px;
+	overflow:hidden;
+	
+}
+
+.post .file_image_commit div{
+	float:left;
+	width:590px;
+	height:24px;
+	line-height:12px;
+	
+}
+
+.post .file_image_commit a{
+	text-decoration:none;
+	color:#3366cc;
+    margin-left:270px;
+
+}
+
+.post .file_image_commit .slight{
+	line-height:30px;
+	
+}
+
+.post .url_image_commit{
+	clear:both;
+	width:600px;
+	padding:5px 0 5px 20px;
+	font-size:20px;
+	height:45px;
+	line-height:45px;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+	border:1px solid #cadbea;
+	background:#fff;
+	margin-bottom:30px;
+}
+
+
+
+.post .url_image_commit span{
+	display: inline-block;
+	font-size:18px;
+	font-family:"Hiragino Sans GB", hei, "microsoft yahei";
+	
+	width:130px;
+	cursor:pointer;
+	line-height:30px;
+	margin-top:9px;
+	vertical-align:top;
+	background-color:#548ff4;
+	-moz-border-radius-topright:8px;
+	-moz-border-radius-bottomright:8px;
+}
+.post .url_image_commit input{
+	border:0;
+	height:40px;
+	line-height:40px;
+	font-size:20px;
+	width:300px;
+}
+
+
 
 
 
