has_other_pages for primary blog

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -79,6 +79,7 @@
 <li>other_pages
 页面拥有者参与或关注的所有页面，用户主页面特有，其中字段见<a
   href="#blog-section">Blog Section</a></li>
+<li>has_other_pages</li>页面拥有者是否参与或关注了其它页面，用户主页面特有
 <li>followings 页面拥有者所关注的页面，用户主页面特有，其中字段见<a href="#blog-section">Blog Section</a></li>
 <li>has_following 页面拥有者是否关注了其他页面，用户主页面特有</li>
 <li>define 定义可以由模板使用者自行调整的变量，详见<a href="#define-section">Define Section</a></li>
