--- a/public/stylesheets/lib.sass
+++ b/public/stylesheets/lib.sass
@@ -60,5 +60,6 @@ $slide-button-size: 18px
   // TODO use custom function to calculate color for MS
 
 @mixin heading
+  font-family: microsoft yahei
   font-weight: normal
   font-size: 30px
