--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -28,6 +28,8 @@
    
     = content_for :form
     .operation
-      %a.cancel{href: url_for(:back)} 返回
+      - if @post.type != 'text'
+        = content_for :content_toggle
       %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
         %input{ :type => "submit", :value => (%w[new renew].include? params[:action])? '发布' : '保存' }
+      %a.cancel{href: url_for(:back)} 返回上一页
