--- a/app/views/posts/_form_text.html.haml
+++ b/app/views/posts/_form_text.html.haml
@@ -3,12 +3,13 @@
 - should_hide_title = post.title.blank?
 - content_for :form do
   .option_text
-    - if should_hide_title
-      %a.new_title_starter.slight{href: "#"}<
-        +新建标题
-      = content_for :content_toggle
+    %a.new_title_starter.slight{href: "#"}<
+      +添加帖子标题
+    %a.hide_title_starter.slight{href: "#"}<
+      \-收起帖子标题
+    = content_for :content_toggle
 
-  .title_text{ style: should_hide_title ? "display: none" : "" }
+  .title_text
     = label_tag :title, "标题(可选)"
     = text_field_tag :title, post.title
   = content_for :content_area
