Use url if title is missing (LinkView)

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -186,7 +186,7 @@ Section里使用</p>
 <h4>字段</h4>
 
 <ul>
-<li>title 标题内容，可能为空</li>
+<li>title 标题内容，如果没有标题则直接输出URL</li>
 <li>shared_url 推荐的链接URL</li>
 <li>content 描述内容，可能为空</li>
 </ul>
