--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -117,6 +117,8 @@
 <li>fave_tag 生成一个<code>&lt;a&gt;</code>标签用于喜欢该帖子；section中间的内容会放在<code>&lt;a&gt;</code>标签内</li>
 <li>is_repost 如果是转帖发布可以进入该section</li>
 <li>repost_parent 如果是转帖发布可以进入一个<a href="#blog-section">Blog Section</a>访问转帖来源页面的信息</li>
+<li>has_tag</li> 有标签的帖子可以进入该section
+<li>tags</li> 进入<a href="#tags-section">Tags Section</a>访问各个标签信息
 </ul>
 
 <h4>表述帖子类型的section</h4>
@@ -203,6 +205,14 @@ Section里使用</p>
 <li>content 描述内容，可能为空</li>
 </ul>
 
+<h3 id="tags-section">Tags Section</h3>
+
+<h4>字段</h4>
+
+<ul>
+<li>name 标签名字</li>
+<li>url 标签URL</li>
+</ul>
 
 <h3 id="user-section">User Section</h3>
 
